--- a/src/app/app.component.html
+++ b/src/app/app.component.html
@@ -30,6 +30,8 @@
                 <a mat-raised-button routerLink="/register">Regístrate</a>
             </div>
         </mat-toolbar>
-        <router-outlet></router-outlet>
+        <div class="container">
+            <router-outlet></router-outlet>
+        </div>
     </mat-sidenav-content>
 </mat-sidenav-container>
