--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -1,22 +1,33 @@
 <h1>Iniciar sesión</h1>
 
-<mat-card class="loginCard">
-    <mat-card-title>Iniciar sesión</mat-card-title>
-    <mat-card-subtitle>Inicia sesión para continuar</mat-card-subtitle>
-    <mat-card-content>
-        <form class="login-form">
+<form class="login-form loginCard" (submit)="clickLogin()">
+    <mat-card>
+        <mat-card-title>Iniciar sesión</mat-card-title>
+        <mat-card-subtitle>Inicia sesión para continuar</mat-card-subtitle>
+        <mat-card-content>
+
             <mat-form-field class="login-field">
                 <mat-label>Correo electrónico</mat-label>
-                <input matInput placeholder="example@example.com">
+                <input matInput placeholder="example@example.com" type="email" autocomplete="off" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                    Introduce una dirección de email válida
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
             </mat-form-field>
 
             <mat-form-field class="login-field">
                 <mat-label>Contraseña</mat-label>
-                <input matInput>
+                <input matInput type="password" [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
             </mat-form-field>
-        </form>
-    </mat-card-content>
-    <mat-card-actions class="acciones">
-        <button mat-raised-button color="primary" (click)="clickLogin()">Iniciar sesión</button>
-    </mat-card-actions>
-</mat-card>
+
+        </mat-card-content>
+        <mat-card-actions class="acciones">
+            <button mat-raised-button color="primary" type="submit">Iniciar sesión</button>
+        </mat-card-actions>
+    </mat-card>
+</form>
