--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -1,1 +1,55 @@
-<p>register works!</p>
+<h1>Regístrate</h1>
+
+<form class="register-form registerCard" (submit)="clickRegister()">
+    <mat-card>
+        <mat-card-title>Registro</mat-card-title>
+        <mat-card-subtitle>Regístrate ya para comenzar a crear tus códigos QR dinámicos</mat-card-subtitle>
+        <mat-card-content>
+
+            <mat-form-field class="register-field">
+                <mat-label>Nombre de usuario</mat-label>
+                <input matInput type="text" autocomplete="off" [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="usernameFormControl.hasError('email') && !usernameFormControl.hasError('required')">
+                    Introduce una dirección de email válida
+                </mat-error>
+                <mat-error *ngIf="usernameFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
+                <mat-error *ngIf="usernameFormControl.hasError('maxlength')">
+                    Límite de 24 caracteres
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="register-field">
+                <mat-label>Correo electrónico</mat-label>
+                <input matInput placeholder="example@example.com" type="email" autocomplete="off" [formControl]="emailFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="emailFormControl.hasError('email') && !emailFormControl.hasError('required')">
+                    Introduce una dirección de email válida
+                </mat-error>
+                <mat-error *ngIf="emailFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="register-field">
+                <mat-label>Contraseña</mat-label>
+                <input matInput type="password" [formControl]="passwordFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="passwordFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
+            </mat-form-field>
+
+            <mat-form-field class="register-field">
+                <mat-label>Repite la contraseña</mat-label>
+                <input matInput type="password" [formControl]="passwordConfirmFormControl" [errorStateMatcher]="matcher">
+                <mat-error *ngIf="passwordConfirmFormControl.hasError('required')">
+                    Campo obligatorio
+                </mat-error>
+            </mat-form-field>
+
+        </mat-card-content>
+        <mat-card-actions class="acciones">
+            <button mat-raised-button color="primary" type="submit">Registrarse</button>
+        </mat-card-actions>
+    </mat-card>
+</form>
