--- a/src/app/login/login.component.html
+++ b/src/app/login/login.component.html
@@ -28,8 +28,8 @@
         </mat-card-content>
         <mat-card-actions class="acciones">
             <a mat-stroked-button routerLink="/forgot-password">
-                <mat-icon aria-hidden="false" aria-label="Forgot password">restart_alt</mat-icon> Olvidé mi contraseña</a>
-            <button mat-raised-button color="primary" type="submit"><mat-icon aria-hidden="false" aria-label="Forgot password">login</mat-icon> Iniciar sesión</button>
+                <mat-icon aria-hidden="false" aria-label="Olvide contraseña">restart_alt</mat-icon> Olvidé mi contraseña</a>
+            <button mat-raised-button color="primary" type="submit"><mat-icon aria-hidden="false" aria-label="Iniciar sesion">login</mat-icon> Iniciar sesión</button>
         </mat-card-actions>
     </mat-card>
 </form>
