--- a/src/app/qr-codes-list/qr-codes-list.component.html
+++ b/src/app/qr-codes-list/qr-codes-list.component.html
@@ -14,20 +14,19 @@
             <td mat-cell *matCellDef="let element"> <a mat-button [href]="element.destination_url" target="_blank">{{element.destination_url}}</a></td>
         </ng-container>
 
-        <!-- CreatedAt Column -->
-        <ng-container matColumnDef="created_at">
-            <th mat-header-cell *matHeaderCellDef> Fecha de creación </th>
-            <td mat-cell *matCellDef="let element"> {{element.created_at}} </td>
-        </ng-container>
-
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
-            <td mat-cell *matCellDef="let element"> <button mat-flat-button color="primary">Editar</button> </td>
+            <td mat-cell *matCellDef="let element"> <button mat-stroked-button color="primary">Editar</button> </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
         <tr mat-row *matRowDef="let row; columns: displayedColumns;"></tr>
     </table>
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
+</div>
+<div class="floatingBtn">
+    <button mat-fab color="primary" aria-label="Add new QR Code" matTooltip="Añadir nuevo QR" [matTooltipPosition]="'before'">
+	<mat-icon>add</mat-icon>
+</button>
 </div>
