--- a/src/app/account/account.component.css
+++ b/src/app/account/account.component.css
@@ -2,6 +2,16 @@
     margin: 1em;
 }
 
+.mainInfo {
+    display: inline-block;
+    vertical-align: middle;
+}
+
+.avatarImage {
+    width: 100px;
+    border-radius: 50%;
+}
+
 .formCard {
     margin: auto;
     min-width: 150px;
