--- a/src/app/qr-codes-list/qr-codes-list.component.html
+++ b/src/app/qr-codes-list/qr-codes-list.component.html
@@ -4,20 +4,26 @@
 
         <!-- Id Column -->
         <ng-container matColumnDef="id">
-            <th mat-header-cell *matHeaderCellDef> Identificador </th>
-            <td mat-cell *matCellDef="let element"> {{element.id}} </td>
+            <th mat-header-cell *matHeaderCellDef> Id </th>
+            <td mat-cell *matCellDef="let element">{{ beautifyString(element.id, 10) }}</td>
         </ng-container>
 
         <!-- Destination Column -->
         <ng-container matColumnDef="destination_url">
             <th mat-header-cell *matHeaderCellDef> Destino </th>
-            <td mat-cell *matCellDef="let element"> <a mat-button [href]="element.destination_url" target="_blank">{{element.destination_url}}</a></td>
+            <td mat-cell *matCellDef="let element">
+                <a mat-button [href]="element.destination_url" target="_blank">{{ beautifyString(element.destination_url, 20) }}</a>
+            </td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Acciones </th>
-            <td mat-cell *matCellDef="let element"> <button mat-stroked-button color="primary">Editar</button> </td>
+            <th mat-header-cell *matHeaderCellDef> Editar </th>
+            <td mat-cell *matCellDef="let element">
+                <button mat-icon-button color="primary" aria-label="Editar">
+					<mat-icon>edit</mat-icon>
+				</button>
+            </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="displayedColumns"></tr>
@@ -26,7 +32,7 @@
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
 <div class="floatingBtn">
-    <button mat-fab color="primary" aria-label="Add new QR Code" matTooltip="Añadir nuevo QR" [matTooltipPosition]="'before'">
-	<mat-icon>add</mat-icon>
-</button>
+    <button mat-fab color="primary" aria-label="Add new QR Code" matTooltip="Añadir nuevo QR" [matTooltipPosition]="'before'" (click)="openAddDialog()">
+		<mat-icon>add</mat-icon>
+	</button>
 </div>
