--- a/src/app/register/register.component.html
+++ b/src/app/register/register.component.html
@@ -9,6 +9,7 @@
             <mat-form-field class="register-field">
                 <mat-label>Nombre de usuario</mat-label>
                 <input matInput type="text" autocomplete="off" [formControl]="usernameFormControl" [errorStateMatcher]="matcher">
+                <mat-hint align="end">{{usernameFormControl.value.length}} / 24</mat-hint>
                 <mat-error *ngIf="usernameFormControl.hasError('required')">
                     Campo obligatorio
                 </mat-error>
