--- a/src/app/qr-codes-list/qr-codes-list.component.html
+++ b/src/app/qr-codes-list/qr-codes-list.component.html
@@ -12,32 +12,54 @@
         <ng-container matColumnDef="destination_url">
             <th mat-header-cell *matHeaderCellDef> Destino </th>
             <td mat-cell *matCellDef="let element">
-                <a mat-button [href]="element.destination_url" target="_blank">{{ beautifyString(element.destination_url, 30) }}</a>
+                {{ beautifyString(element.destination_url, 80) }}
             </td>
         </ng-container>
 
         <!-- Actions Column -->
         <ng-container matColumnDef="actions">
-            <th mat-header-cell *matHeaderCellDef> Editar </th>
+            <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" aria-label="Editar">
-					<mat-icon>edit</mat-icon>
+                <button mat-icon-button color="primary" aria-label="Ir al enlace" fxShow="true" fxHide.lt-md="true">
+					<mat-icon>launch</mat-icon>
+				</button>
+                <button mat-icon-button color="primary" aria-label="Copiar enlace corto" matTooltip="Copiar al portapapeles" fxShow="true" fxHide.lt-md="true" [cdkCopyToClipboard]="env.SHORTED_QR_URL + '/' + element.id">
+					<mat-icon>content_copy</mat-icon>
+				</button>
+                <button mat-icon-button color="primary" aria-label="Descargar" matTooltip="Descargar PNG" fxShow="true" fxHide.lt-md="true">
+					<mat-icon>download</mat-icon>
+				</button>
+                <button mat-icon-button color="primary" aria-label="Editar" (click)="openOptionsMenu($event, element)">
+					<mat-icon>more_horiz</mat-icon>
 				</button>
             </td>
         </ng-container>
 
         <ng-container matColumnDef="expandedDetail">
             <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
-                <div class="example-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
-                    <div [innerHTML]="element.svg_image"></div>
+                <div class="qrlist-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
+                    <div class="qrlist-element-detail-info">
+                        <div class="qrlist-element-image" [innerHTML]="element.svg_image"></div>
+                        <div class="qrlist-element-details">
+                            <p>
+                                <span>Algo que poner aqui...</span>
+                            </p>
+                            <p>
+                                <span>Algo que poner aqui...</span>
+                            </p>
+                            <p>
+                                <mat-icon style="vertical-align: middle;">assessment</mat-icon> 100 | Estadisticas
+                            </p>
+                        </div>
+                    </div>
                 </div>
             </td>
         </ng-container>
 
         <tr mat-header-row *matHeaderRowDef="columnsToDisplay"></tr>
-        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="example-element-row" [class.example-expanded-row]="expandedElement === element" (click)="expandRow(element)">
+        <tr mat-row *matRowDef="let element; columns: columnsToDisplay;" class="qrlist-element-row" [class.qrlist-expanded-row]="expandedElement === element" (click)="expandRow(element)">
         </tr>
-        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="example-detail-row"></tr>
+        <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="qrlist-detail-row"></tr>
     </table>
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
