--- a/src/app/qr-codes-list/qr-codes-list.component.html
+++ b/src/app/qr-codes-list/qr-codes-list.component.html
@@ -1,5 +1,5 @@
 <h1>Mis códigos QR</h1>
-<div class="mat-elevation-z8 containerTable">
+<div class="mat-elevation-z8 containerTable" [hidden]="resultsLength == 0">
     <table mat-table [dataSource]="dataSource" multiTemplateDataRows class="containerTable">
 
         <!-- Id Column -->
@@ -20,10 +20,10 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element">
-                <button mat-icon-button color="primary" aria-label="Ir al enlace" fxShow="true" fxHide.lt-md="true">
-					<mat-icon>launch</mat-icon>
-				</button>
-                <button mat-icon-button color="primary" aria-label="Copiar enlace corto" matTooltip="Copiar al portapapeles" fxShow="true" fxHide.lt-md="true" [cdkCopyToClipboard]="env.SHORTED_QR_URL + '/' + element.id">
+                <a mat-icon-button color="primary" aria-label="Ir al enlace" [href]="env.SHORTED_QR_URL + '/' + element.id" target="_blank" fxShow="true" fxHide.lt-md="true">
+                    <mat-icon>launch</mat-icon>
+                </a>
+                <button mat-icon-button color="primary" aria-label="Copiar enlace corto" matTooltip="Copiar al portapapeles" fxShow="true" fxHide.lt-md="true" [cdkCopyToClipboard]="env.SHORTED_QR_URL + '/' + element.id" (click)="stopPropagation($event)">
 					<mat-icon>content_copy</mat-icon>
 				</button>
                 <button mat-icon-button color="primary" aria-label="Descargar" matTooltip="Descargar PNG" fxShow="true" fxHide.lt-md="true">
@@ -62,6 +62,9 @@
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="qrlist-detail-row"></tr>
     </table>
     <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
+</div>
+<div [hidden]="resultsLength != 0">
+    <p>Nada por aqui... aún. ¡Pulsa el botón situado abajo a la derecha para crear tu primer QR!</p>
 </div>
 <div class="floatingBtn">
     <button mat-fab color="primary" aria-label="Add new QR Code" matTooltip="Añadir nuevo QR" [matTooltipPosition]="'before'" (click)="openAddDialog()">
