Switch from SVG to PNG

--- a/src/app/qr-codes-list/qr-codes-list.component.css
+++ b/src/app/qr-codes-list/qr-codes-list.component.css
@@ -68,6 +68,8 @@ tr.qrlist-element-row:not(.qrlist-expanded-row):active {
 
 .qrlist-element-image {
     margin: 8px 0;
+    width: 128px;
+    height: 128px;
 }
 
 .qrlist-element-details {
