--- a/src/app/qr-codes-list/qr-codes-list.component.html
+++ b/src/app/qr-codes-list/qr-codes-list.component.html
@@ -20,14 +20,11 @@
         <ng-container matColumnDef="actions">
             <th mat-header-cell *matHeaderCellDef> Acciones </th>
             <td mat-cell *matCellDef="let element">
-                <a mat-icon-button color="primary" aria-label="Ir al enlace" [href]="env.SHORTED_QR_URL + '/' + element.id" target="_blank" fxShow="true" fxHide.lt-md="true">
+                <a mat-icon-button color="primary" aria-label="Ir al enlace" matTooltip="Visitar enlace" [href]="env.SHORTED_QR_URL + '/' + element.id" target="_blank" fxShow="true" fxHide.lt-md="true">
                     <mat-icon>launch</mat-icon>
                 </a>
                 <button mat-icon-button color="primary" aria-label="Copiar enlace corto" matTooltip="Copiar al portapapeles" fxShow="true" fxHide.lt-md="true" [cdkCopyToClipboard]="env.SHORTED_QR_URL + '/' + element.id" (click)="stopPropagation($event)">
 					<mat-icon>content_copy</mat-icon>
-				</button>
-                <button mat-icon-button color="primary" aria-label="Descargar" matTooltip="Descargar PNG" fxShow="true" fxHide.lt-md="true">
-					<mat-icon>download</mat-icon>
 				</button>
                 <button mat-icon-button color="primary" aria-label="Editar" (click)="openOptionsMenu($event, element)">
 					<mat-icon>more_horiz</mat-icon>
@@ -39,13 +36,15 @@
             <td mat-cell *matCellDef="let element" [attr.colspan]="columnsToDisplay.length">
                 <div class="qrlist-element-detail" [@detailExpand]="element == expandedElement ? 'expanded' : 'collapsed'">
                     <div class="qrlist-element-detail-info">
-                        <div class="qrlist-element-image" [innerHTML]="element.svg_image"></div>
+                        <img class="qrlist-element-image" alt="Codigo QR" [src]="element.png_image" />
                         <div class="qrlist-element-details">
                             <p>
-                                <span>Algo que poner aqui...</span>
+                                <span>Aquí tienes tu QR</span>
                             </p>
                             <p>
-                                <span>Algo que poner aqui...</span>
+                                <a mat-icon-button color="primary" aria-label="Descargar" [disabled]="!element.png_image" matTooltip="Descargar PNG" download="qr_{{ element.id }}.png" [href]="element.png_image">
+                                    <mat-icon>download</mat-icon> Descargar
+                                </a>
                             </p>
                             <p>
                                 <mat-icon style="vertical-align: middle;">assessment</mat-icon> 100 | Estadisticas
@@ -61,7 +60,7 @@
         </tr>
         <tr mat-row *matRowDef="let row; columns: ['expandedDetail']" class="qrlist-detail-row"></tr>
     </table>
-    <mat-paginator [length]="resultsLength" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
+    <mat-paginator [length]="resultsLength" [pageSize]="10" [pageSizeOptions]="[5, 10, 20, 50]" showFirstLastButtons></mat-paginator>
 </div>
 <div [hidden]="resultsLength != 0">
     <p>Nada por aqui... aún. ¡Pulsa el botón situado abajo a la derecha para crear tu primer QR!</p>
