--- a/src/app/qr-codes-list-options/qr-codes-list-options.component.html
+++ b/src/app/qr-codes-list-options/qr-codes-list-options.component.html
@@ -1,12 +1,17 @@
 <mat-nav-list>
-    <a mat-list-item [href]="env.SHORTED_QR_URL + '/' + data.element.id" target="_blank" fxShow="true" fxHide.gt-sm="true">
+    <a mat-list-item (click)="dismiss($event)" [href]="env.SHORTED_QR_URL + '/' + data.element.id" target="_blank" fxShow="true" fxHide.gt-sm="true">
         <span mat-line>Abrir enlace</span>
         <span mat-line>Abre el enlace de este código QR en una nueva pestaña</span>
     </a>
 
-    <a mat-list-item (click)="copyQR($event)" fxShow="true" fxHide.gt-sm="true">
+    <a mat-list-item (click)="dismiss($event)" [cdkCopyToClipboard]="env.SHORTED_QR_URL + '/' + data.element.id" fxShow="true" fxHide.gt-sm="true">
         <span mat-line>Copiar enlace acortado</span>
         <span mat-line>Copia el enlace corto de este código QR</span>
+    </a>
+
+    <a mat-list-item (click)="dismiss($event)" routerLink="qrcodes/{{data.element.id}}/stats" fxShow="true" fxHide.gt-sm="true">
+        <span mat-line>Estadísticas</span>
+        <span mat-line>Ver estadísticas de tu código QR</span>
     </a>
 
     <a mat-list-item (click)="editQR($event)">
@@ -14,9 +19,9 @@
         <span mat-line>Modifica el tipo o destino de tu código QR</span>
     </a>
 
-    <a mat-list-item (click)="customizeQR($event)">
+    <a mat-list-item (click)="dismiss($event)" routerLink="qrcodes/{{data.element.id}}/customize">
         <span mat-line>Personalizar</span>
-        <span mat-line>Genera un código QR con un color, logotipo o diseño personalizado (Lo hare lo ultimo si sobra tiempo)</span>
+        <span mat-line>Genera un código QR con un color, logotipo o diseño personalizado</span>
     </a>
 
     <a mat-list-item (click)="deleteQR($event)">
